fix title spacing and add proper arrow character

--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -282,3 +282,9 @@ article.wiki, .postbody {
 .fa {
 	transform: translate(0);
 }
+
+.card-header {
+	h1, h2, h3, h4, h5, h6 {
+		margin-bottom: 0;
+	}
+}
